fix name and title

--- a/Getting started/wikipedia.html
+++ b/Getting started/wikipedia.html
@@ -2,31 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>First exercise</title>
-        <style>
-            ol {
-                counter-reset: item;
-                list-style: none;
-            }
-            ol li:before {
-                content: counters(item,'.') " ";
-                counter-increment: item;
-            }
-            table {
-                border: 1px solid #a2a9b1;
-                border-collapse: collapse;
-            }
-
-            td, th {
-                border: 1px solid #a2a9b1;
-                padding: .2rem .4rem;
-            }
-            thead{
-                background-color:  #ececec;
-            }
-
-        </style>
-        <link rel="stylesheet" href="style.css">
+        <title>wikipedia</title>
+        <link rel="stylesheet" href="wikipedia.css">
     </head>
     <body>
 
